--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ follow:
   - class: icon-rss
     url: /atom.xml
   - class: icon-weibo
-    url: http://weibo.com/pizn
+    url: http://weibo.com/
   - class: icon-renren
     url: http://renren.com
   - class: icon-github-alt
@@ -91,7 +91,7 @@ customLinks:
     - text: Jekyll Theme
       url: http://www.zhanxin.info/themes.html
     - text: xmfbit
-      url: xmfbit.github.io
+      url: http://xmfbit.github.io
     message: 友情链接
   - item:
     - text: Font Awesome
@@ -114,4 +114,4 @@ disqus:
 
 duoshuo:
   config: true
-  id: wzl
+  id: harry07ss
