--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ timezone:      null
 
 
 #Site config
-title: harry07ss的博客
+title: BITWZL的博客
 description: Just another Jekyll theme design and code by zhanxin.info.
 keywords: Jekyll Theme
 url: http://harry07ss.github.io/
@@ -60,10 +60,10 @@ nav:
 
 #Author config
 author:
-    name: harry07ss
+    name: BITWZL
     email: 791489930@qq.com
     imageLink: http://www.qqtouxiang888.com/uploads/allimg/100917/klde8.jpg
-    simpleIntro: 我是「harry07ss」，这里分享我个人一些技术方面的经历和总结，希望能锻炼写作，并能和大家交流。
+    simpleIntro: 我是「BITWZL」，这里分享我个人一些技术方面的经历和总结，希望能锻炼写作，并能和大家交流。
     detailIntro:
       <p>Jekyll 是一个简洁的、特别针对博客平台的 静态网站 生成器。它使用一个模板目录作为网站布局的基础框架，并在其上运行 Textile 、 Markdown 或 Liquid 标记语言的转换器，最终生成一个完整的静态Web站点，可以被放置在Apache或者你喜欢的其他任何Web服务器上。它同时也是 GitHub Pages 、一个由 GitHub 提供的用于托管项目主页或博客的服务，在后台所运行的引擎。</p>
       <p>这是本人搭建的第一个博客网站，无论页面还是内容都比较随意，您如果有任何建议，欢迎一起交流，邮箱＆QQ:791489930@qq.com </p>     
